# python-databind

./: .gitignore  404.html  Makefile  README.md  _stop_type_conversion.py  index.html  monorepo.yml  objects.inv  readme.md  sitemap.xml  slam.toml  slap.toml
.changelog/: 0.10.0.toml  0.11.0.toml  0.12.0.toml  0.2.0.toml  0.3.0.toml  0.4.0.toml  0.4.1.toml  0.4.2.toml  0.5.0.toml  0.5.1.toml  0.6.0.toml  0.6.1.toml  0.7.0.toml  0.7.1.toml  0.8.0.toml  0.9.0.toml  1.0.0.toml  1.0.0.yml  1.0.1.toml  1.0.1.yml  1.1.0.toml  1.1.0.yml  1.1.1.toml  1.1.2.toml  1.1.3.toml  1.1.4.yml  1.1.5.toml  1.1.6.toml  1.2.0.toml  1.2.1.yml  1.2.2.toml  1.2.3.toml  1.2.4.toml  1.2.5.toml  1.2.6.toml  1.3.0.toml  1.3.1.toml  1.3.2.toml  1.4.0.toml  1.5.0.toml  (+37 more)
.github/files/: slam-cli.txt
.github/workflows/: changelog.yaml  python.yaml  python.yml  test.yml
_old/annotations/: __init__.py  enable_unknowns.py  fieldinfo.py  precision.py
_old/databind.binary/: MANIFEST.in  (+2 more)
basic-usage/: index.html
changelog/: index.html
core/: index.html
databind/: MANIFEST.in  README.md  package.yaml  package.yml  pyproject.toml  readme.md  setup.py
databind.binary/: MANIFEST.in  README.md  package.yaml  package.yml  setup.py  test.py
databind.core/: .flake8  MANIFEST.in  README.md  index.html  package.yaml  package.yml  pyproject.toml  setup.py  slam.toml  test.py
databind.core/.changelog/: 0.10.0.toml  0.10.0.yml  0.11.0.toml  0.11.0.yml  0.2.0.toml  0.2.0.yml  0.3.0.toml  0.3.0.yml  0.4.0.toml  0.4.1.toml  0.4.1.yml  0.4.2.toml  0.4.2.yml  0.5.0.toml  0.5.0.yml  0.6.0.toml  0.6.0.yml  0.7.0.toml  0.7.0.yml  0.7.1.toml  0.7.1.yml  0.8.0.toml  0.8.0.yml  0.9.0.toml  0.9.0.yml  1.0.0.toml  1.0.0.yml  1.0.1.toml  1.1.0.toml  1.1.0.yml  1.1.1.toml  1.1.1.yml  1.1.2.toml  1.1.2.yml  1.1.3.toml  1.1.3.yml  1.1.5.toml  1.1.5.yml  1.1.6.toml  1.1.6.yml  (+49 more)
databind.core/src/: _databind_core_proxy.py
databind.core/src/databind/core/: __init__.py  _annotations.py  _converter.py  _datamodel.py  _locator.py  _typing.py  _union.py  annotations.py  api.py  context.py  converter.py  dataclasses.py  dataclasses.pyi  dataclasses_test.py  location.py  location_test.py  mapper.py  module.py  objectmapper.py  schema.py  schema_test.py  settings.py  typehint.py  typehint_test.py  types.py  types_test.py  union.py  utils.py
databind.core/src/databind/core/annotations/: __init__.py  __init__test.py  _test.py  alias.py  base.py  datefmt.py  datefmt_test.py  enable_unknowns.py  fieldinfo.py  precision.py  typeinfo.py  unionclass.py  unionclass_test.py
databind.core/src/databind/core/default/: dataclass.py  dataclass_test.py  dataclasses.py  dataclasses_test.py  unionclass.py  unionclass_test.py
databind.core/src/databind/core/mapper/: __init__.py  api.py  converter.py  location.py  location_test.py  module.py  objectmapper.py  settings_test.py
databind.core/src/databind/core/objectmapper/: __init__.py  deser.py  location.py  mapper.py  typehint.py
databind.core/src/databind/core/tests/: schema_test.py  test_datamodel.py  test_registry.py
databind.core/src/databind/core/types/: __init__.py  adapter.py  adapter_test.py  converter.py  converter_test.py  schema.py  schema_test.py  types.py  types_test.py  union.py  union_test.py  utils.py  utils_test.py
databind.core/src/test/: test_annotations_base.py  test_annotations_datefmt.py  test_dataclasses.py  test_mapper_location.py  test_mapper_settings.py  test_python3_10_union_type.py  test_star_imports.py  test_types_converter.py  test_types_schema.py  test_types_types.py  test_types_union.py  test_types_utils.py
databind.core/test/: test_context.py  test_schema.py
databind.core/tests/: test_context.py  test_schema.py  test_schema_docspec_example.py
databind.json/: .flake8  MANIFEST.in  README.md  index.html  package.yaml  package.yml  pyproject.toml  readme.md  setup.py
databind.json/.changelog/: 0.10.0.toml  0.10.0.yml  0.11.0.toml  0.11.0.yml  0.12.0.toml  0.12.0.yml  0.2.0.toml  0.2.0.yml  0.3.0.toml  0.3.0.yml  0.4.0.toml  0.4.0.yml  0.4.1.toml  0.4.1.yml  0.5.0.toml  0.5.0.yml  0.5.1.toml  0.5.1.yml  0.6.0.toml  0.6.0.yml  0.6.1.toml  0.6.1.yml  0.7.0.toml  0.7.0.yml  0.7.1.toml  0.7.1.yml  0.8.0.toml  0.8.0.yml  0.9.0.toml  0.9.0.yml  1.1.2.toml  1.1.2.yml  1.1.5.toml  1.1.5.yml  1.2.0.toml  1.2.0.yml  1.2.4.toml  1.2.4.yml  1.3.1.toml  1.3.1.yml  (+26 more)
databind.json/src/databind/json/: __init__.py  __init__test.py  _converters.py  converters.py  dataclass.py  datamodel.py  datetime.py  decimal.py  direction.py  module.py  objecttype.py  objecttype_test.py  plain.py  settings.py  test_datetime.py  unionclass.py  unionclass_test.py  uniontype.py
databind.json/src/databind/json/modules/: any.py  collection.py  collection_test.py  datetime.py  datetime_test.py  decimal.py  enum.py  implicitunion.py  map.py  map_test.py  object.py  object_test.py  optional.py  pathlib.py  plain.py  string.py  union.py  union_test.py
databind.json/src/databind/json/serializers/: __init__.py  dataclass.py  datamodel.py
databind.json/src/databind/json/tests/: converters_test.py  test_json.py
databind.json/src/test/: test_init.py  test_moduels_union.py  test_modules_datetime.py  test_modules_map.py  test_modules_object.py  test_modules_pathlib.py  test_modules_union.py  test_modules_uuid.py  test_with_custom_json_converter.py
databind.json/test/: test_converters.py
databind.json/tests/: test_converters.py
databind.mypy/: MANIFEST.in  README.md  package.yml  setup.py
databind.tagline/: MANIFEST.in  README.md  package.yml  setup.py
databind.yaml/: MANIFEST.in  package.yml  setup.py
databind/.changelog/: 4.3.0.toml  _unreleased.toml
databind/src/databind/: __init__.py
databind/src/databind/_version/: __init__.py
databind/src/databind/core/: __init__.py
databind/src/databind/json/: __init__.py  converters.py
databind/src/databind/json/tests/: converters_test.py
dataclass-ext/: index.html
docs/: build.novella  mkdocs.yml  mksync-hook.py
examples/: index.html
json/: index.html
pitfalls/: index.html
search/: search_index.json
settings/: index.html
(+125 files in other folders)
