[tool.poetry]
name = "databind.core"
version = "4.2.1"
description = "Databind is a library inspired by jackson-databind to de-/serialize Python dataclasses. Compatible with Python 3.7 and newer."
authors = ["Niklas Rosenstein <rosensteinniklas@gmail.com>"]
license = "MIT"
readme = "readme.md"
packages = [{include = "databind/core", from = "src"}]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/NiklasRosenstein/python-databind/issues"
Documentation = "https://niklasrosenstein.github.io/python-databind/"
# Homepage = ""
Repository = "https://github.com/NiklasRosenstein/python-databind"

[tool.poetry.dependencies]
python = "^3.6.3"
Deprecated = "^1.2.12"
nr-date = "^2.0.0"
nr-stream = "^1.0.0"
typeapi = "^1.2.1"
typing-extensions = ">=3.10.0"

[tool.poetry.dev-dependencies]
black = "*"
flake8 = "*"
isort = "*"
pytest = "*"
mypy = "*"
types-dataclasses = "*"
types-deprecated = "*"
types-pkg_resources = "*"
types-termcolor = "*"

[tool.slap]
typed = true

[build-system]
requires = ["poetry-core==1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.slap.test]
check = "slap check"
mypy = "dmypy run src/"
pytest = "pytest tests/ -vv"
black = "black --check src/ tests/"
isort = "isort --check-only src/ tests/"
flake8 = "flake8 src/ tests/"

[tool.slap.run]
fmt = "black src/ tests/ && isort src/ tests/"

[tool.mypy]
python_version = "3.6"
explicit_package_bases = true
mypy_path = ["src"]
namespace_packages = true
pretty = true
show_error_codes = true
show_error_context = true
strict = true
warn_no_return = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_ignores = true

[tool.isort]
profile = "black"
line_length = 120
combine_as_imports = true

[tool.black]
line-length = 120
