[tool.poetry]
name = "databind.core"
version = "4.5.0"
description = "Databind is a library inspired by jackson-databind to de-/serialize Python dataclasses. Compatible with Python 3.8 and newer. Deprecated, use `databind` package."
authors = ["Niklas Rosenstein <rosensteinniklas@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "_databind_core_proxy.py", from = "src"}]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/NiklasRosenstein/python-databind/issues"
Documentation = "https://niklasrosenstein.github.io/python-databind/"
Repository = "https://github.com/NiklasRosenstein/python-databind"

[tool.poetry.dependencies]
python = "^3.8.0"
databind = "^4.5.0"

[tool.slap]
typed = true

[build-system]
requires = ["poetry-core==1.9.0"]
build-backend = "poetry.core.masonry.api"
