[tool.poetry]
name = "databind.json"
version = "4.4.2"
description = "De-/serialize Python dataclasses to or from JSON payloads. Compatible with Python 3.8 and newer."
authors = ["Niklas Rosenstein <rosensteinniklas@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "databind/json", from = "src"}]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/NiklasRosenstein/python-databind/issues"
Documentation = "https://niklasrosenstein.github.io/python-databind/"
# Homepage = ""
Repository = "https://github.com/NiklasRosenstein/python-databind"

[tool.poetry.dependencies]
python = "^3.8.0"
"databind.core" = "^4.4.2"
nr-date = "^2.0.0"
typeapi = ">=2.0.1,<3"
typing-extensions = ">=3.10.0,<5"

[tool.poetry.dev-dependencies]
black = "*"
flake8 = "*"
isort = "*"
pytest = "*"
mypy = "*"

[build-system]
requires = ["poetry-core==1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.slap]
typed = true

[tool.slap.test]
check = "slap check"
mypy = "dmypy run src/"
pytest = "pytest src/ -vv $PYTEST_FLAGS"
black = "black --check src/"
isort = "isort --check-only src/"
flake8 = "flake8 src/"

[tool.slap.run]
fmt = "black src/ && isort src/"

[tool.mypy]
python_version = "3.8"
explicit_package_bases = true
mypy_path = ["src"]
namespace_packages = true
pretty = true
show_error_codes = true
show_error_context = true
strict = true
warn_no_return = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_ignores = true

[tool.isort]
profile = "black"
line_length = 120
combine_as_imports = true

[tool.black]
line-length = 120
