[tool.poetry]
name = "databind"
version = "2.0.8"
description = "Databind is a library inspired by jackson-databind to de-/serialize Python dataclasses. The `databind` package will install the full suite of databind packages. Compatible with Python 3.7 and newer."
authors = ["Niklas Rosenstein <rosensteinniklas@gmail.com>"]
license = "MIT"
readme = "readme.md"
packages = [{ include="databind/_version", from="src" }]

  [tool.poetry.dependencies]
  python = "^3.7"
  "databind.core" = "^2.0.8"
  "databind.json" = "^2.0.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
